--- a/index.html
+++ b/index.html
@@ -8,11 +8,11 @@
 <body>
 
     <header>
-        <h1>Descarga de Archivo</h1>
+        <h1>StatsLab HUB</h1>
     </header>
 
     <section>
-        <img src="tu_imagen.jpg" alt="Descripción de la imagen">
+        <img src="Images/logoStatsHUB.jpg" alt="Descripción de la imagen" width ="100" height="100">
         <p>Descripción de la página o del archivo que estás ofreciendo para descargar.</p>
         
         <a href="https://github.com/marcosfern1996/marcosfern1996.github.io/releases/download/v1.0.0/" download>
