--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         <img src="Images/logoStatsHUB.jpg" alt="Descripción de la imagen" width ="100" height="100">
         <p>Descripción de la página o del archivo que estás ofreciendo para descargar.</p>
         
-        <a href="https://github.com/marcosfern1996/marcosfern1996.github.io/releases/download/v1.0.0/" download>
+        <a href="https://github.com/marcosfern1996/marcosfern1996.github.io/releases" download>
             <button>Descargar Archivo</button>
         </a>
     </section>
