--- a/index.html
+++ b/index.html
@@ -8,12 +8,23 @@
 <body>
 
     <header>
-        <h1>StatsLab HUB</h1>
+        <h1>Stats HUB</h1>
     </header>
 
     <section>
         <img src="Images/logoStatsHUB.jpg" alt="Descripción de la imagen" width ="100" height="100">
-        <p>Descripción de la página o del archivo que estás ofreciendo para descargar.</p>
+        <p>Nombre de la Aplicación: StatsHub<br>
+
+	Descripción:<br>
+
+StatsHub es una herramienta potente y versátil diseñada para mejorar tu experiencia de transmisión en OBS (Open Broadcaster Software) y Twitch.<br>
+Con una interfaz sencilla pero completa, StatsHub te proporciona información en tiempo real sobre tus fuentes de OBS y tu canal de Twitch, todo en un único lugar.<br>
+
+Características Principales:
+
+Monitoreo en Tiempo Real de Fuentes OBS: Visualiza fácilmente el estado de tus fuentes, ya sean entradas o salidas, para garantizar una transmisión sin problemas.<br>
+
+Integración con Twitch: Mantente conectado con tu audiencia de Twitch. StatsHub muestra si estás en directo, la cantidad actual de espectadores y más.</p>
         
         <a href="https://github.com/marcosfern1996/marcosfern1996.github.io/releases/tag/v1.0.0" download>
             <button>Descargar Archivo</button>
@@ -21,7 +32,7 @@
     </section>
 
     <footer>
-        <p>  &copy; 2024 Tu Empresa. Todos los derechos reservados.</p>
+        <p>  &copy; 2024 Fernández Marcos.</p>
     </footer>
 
 </body>
